# tket

./: README.md  gen-logo
.github/workflows/: build_and_test.yml  build_macos_m1_wheel  build_macos_wheel  build_symengine.yml  linuxbuildwheel  release.yml
docs/pytket/api/: .buildinfo  architecture.html  backends.html  changelog.html  circuit.html  circuit_class.html  classical.html  config.html  display.html  genindex.html  getting_started.html  index.html  install.html  logging.html  mapping.html  objects.inv  opensource.html  optype.html  partition.html  passes.html  pauli.html  placement.html  predicates.html  program.html  py-modindex.html  qasm.html  quipper.html  routing.html  search.html  searchindex.js  tableau.html  tailoring.html  telemetry_data_policy.html  transform.html  utils.html  zx.html
docs/tket/api/: AASLabelling_8cpp.html  AASLabelling_8cpp__incl.map  AASLabelling_8cpp__incl.md5  AASLabelling_8cpp_source.html  (+2481 more)
pytket/: CMakeLists.txt  setup.py
pytket/tests/: conftest.py  qir_test.py
recipes/symengine/: conanfile.py
recipes/tket/: conanfile.py
recipes/tket-proptests/: conanfile.py
recipes/tket-symbol/: conanfile.py
recipes/tket-tests/: conanfile.py
tket/libs/symbol/: CMakeLists.txt  symbol.cpp
tket/libs/symbol/include/symbol/: symbol.hpp
tket/proptests/: CMakeLists.txt  proptest.cpp
tket/tests/: CMakeLists.txt  test_Clifford.cpp  test_CompilerPass.cpp  test_ControlDecomp.cpp  test_PauliGraph.cpp  test_PhaseGadget.cpp  test_Rebase.cpp  test_Synthesis.cpp  test_TwoQubitCanonical.cpp  test_json.cpp  testutil.hpp
(+807 files in other folders)
